--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -27,6 +27,10 @@
         width: 100%; /* 幅を100%にする */
         z-index: 1000; /* 常に最前面に表示されるように設定 */
     }
+
+    [data-cognigy-webchat-root] [data-cognigy-webchat].webchat .webchat-chat-history {
+        bottom: 300px;
+    }
     
 }
 
