--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -28,7 +28,7 @@
         z-index: 1000; /* 常に最前面に表示されるように設定 */
     }
 
-    [data-cognigy-webchat-root] [data-cognigy-webchat].webchat .webchat-chat-history {
+    [data-cognigy-webchat-root] .webchat-chat-history {
         bottom: 300px;
     }
     
