--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -17,17 +17,9 @@
 @media only screen and (max-width: 768px) {
     [data-cognigy-webchat-root] [data-cognigy-webchat] {
         width: 100%;
-        height: 100dvh - 30px;
+        height: 100dvh;
         right: 0;
     }
-    
-    [data-cognigy-webchat-root] .webchat-input {
-        position: fixed;
-        bottom: 0; /* 下に固定 */
-        width: 100%; /* 幅を100%にする */
-        z-index: 1000; /* 常に最前面に表示されるように設定 */
-    }
-    
 }
 
 
