--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -17,7 +17,7 @@
 @media only screen and (max-width: 768px) {
     [data-cognigy-webchat-root] [data-cognigy-webchat] {
         width: 100%;
-        height: calc(var(--vh) * 100);
+        height: 100dvh;
         right: 0;
         font-size: 16px;
     };
