--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -17,22 +17,12 @@
 @media only screen and (max-width: 768px) {
     [data-cognigy-webchat-root] [data-cognigy-webchat] {
         width: 100%;
-        height: calc(var(--vh, 1vh) * 100);
+        height: 100dvh;
         right: 0;
         font-size: 16px;
         position: fixed; /* 位置を固定 */
         top: 0; /* 画面上部から配置 */
         overflow: hidden; /* はみ出し部分を隠す */
-    }
-
-    /* チャット入力欄は常に最下部に表示 */
-    [data-cognigy-webchat-root] [data-cognigy-webchat].webchat .webchat-input {
-        position: absolute; /* 絶対位置指定 */
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background-color: #fff; /* 背景色を設定 */
-        z-index: 10; /* 重なり順序を指定 */
     }
 }
 
