--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -17,7 +17,7 @@
 @media only screen and (max-width: 768px) {
     [data-cognigy-webchat-root] [data-cognigy-webchat] {
         width: 100%;
-        height: 100svh;
+        height: calc(var(--vh) * 100);
         right: 0;
         font-size: 16px;
         position: fixed; /* 位置を固定 */
@@ -25,7 +25,6 @@
         overflow: hidden; /* はみ出し部分を隠す */
     }
 }
-
 
 /* ヘッダーバー */
 [data-cognigy-webchat-root] [data-cognigy-webchat].webchat .webchat-header-bar {
