--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -24,6 +24,9 @@
         top: 0; /* 画面上部から配置 */
         overflow: hidden; /* はみ出し部分を隠す */
     }
+    [data-cognigy-webchat-root] [data-cognigy-webchat].webchat .webchat-input {
+        bottom: 0;
+    }
 }
 
 /* ヘッダーバー */
