--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -19,7 +19,7 @@
   [data-cognigy-webchat-root]  [data-cognigy-webchat] {
     width: 100%;
     height: 50vh;
-    bottom: 0;
+    bottom: 0 !important;
     font-size: 16px;
   }
 }
