--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -18,7 +18,7 @@
   /* ルート要素のスタイル */
   [data-cognigy-webchat-root]  [data-cognigy-webchat] {
     width: 100%;
-    height: 90vh;
+    height: 100dvh;
     bottom: 0 !important;
     font-size: 16px;
   }
