--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -18,8 +18,7 @@
   /* ルート要素のスタイル */
   [data-cognigy-webchat-root]  [data-cognigy-webchat] {
     width: 100%;
-    height: 100vh;
-    bottom: 0;
+    bottom: 0 !important;
     font-size: 16px;
   }
 }
