--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -19,7 +19,7 @@
   [data-cognigy-webchat-root]  [data-cognigy-webchat] {
     width: 100%;
     top: auto !important;
-    bottom: 0 !important;
+    bottom: auto !important;
     font-size: 16px;
   }
 }
