--- a/static-cognigy/cognigy-style.css
+++ b/static-cognigy/cognigy-style.css
@@ -19,7 +19,7 @@
   @supports (-webkit-appearance: none) {
     [data-cognigy-webchat-root] [data-cognigy-webchat] {
       width: 100%;
-      top: auto !important;
+      top: auto;
       bottom: 0 !important;
       font-size: 16px;
     }
@@ -32,7 +32,7 @@
     [data-cognigy-webchat-root] [data-cognigy-webchat] {
       width: 100%;
       top: 0 !important;
-      bottom: auto !important;
+      bottom: auto;
       font-size: 16px;
     }
   }
